added sdk dependencies

--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,24 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+
+POM_DESCRIPTION=Dependency management for the expresspay sdk v2.
+POM_URL=https://github.com/eashley-exp/epsdkdeps
+POM_SCM_URL=https://github.com/eashley-exp/epsdkdeps
+POM_SCM_CONNECTION=scm:git@github.com:eashley-exp/epsdkdeps.git
+POM_SCM_DEV_CONNECTION=scm:git:ssh://github.com/eashley-exp/epsdkdeps.git
+POM_LICENCE_NAME=MIT License
+#POM_LICENCE_URL=https://github.com/GeofriendTech/AndroidUtils/blob/main/LICENSE
+POM_LICENCE_DIST=repo
+POM_DEVELOPER_ID=auth0_6679ac764e91860af0002356
+POM_DEVELOPER_NAME=Emmanuel Ashley
+POM_DEVELOPER_EMAIL=emmanuelashley@expresspaygh.com
+ossrhUsername=emmanuelashley@expresspaygh.com
+ossrhPassword=$express$Pay$Test$99$
+
+signing.keyId=C977D3C8
+signing.password=sdkdeps
+signing.secretKeyRingFile=/Users/emmanuelasiamahowusu/.gnupg/secring.gpg
+
+#SONATYPE_HOST=CENTRAL_PORTAL
+#RELEASE_SIGNING_ENABLED=true
